# hoch-site

./: 404.html  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  specification.md
docs/styles/: extra.css
